--- a/src/Minesweeper/style/style.css
+++ b/src/Minesweeper/style/style.css
@@ -17,7 +17,7 @@
 .board {
     display: flex;
     flex-wrap: wrap;
-    border: 1px solid #ccc;
+    border-radius: 5px;
     background-color: #ddd;
 }
 
@@ -35,8 +35,7 @@
     flex-wrap: wrap;
     width: 300px;
     height: 300px;
-    border: 3px solid #ccc;
-    background-color: #222;
+    background-color: #202123;
     margin-bottom: 20px;
 }
 
@@ -51,9 +50,7 @@
     border-radius: 4px;
     color: #222;
     cursor: pointer;
-    background-color: #ddd;
-    /* Add the following styles */
-    background-image: linear-gradient(to bottom right, #bbb, #eee);
+    background-color: #f1f1f5;
     box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
@@ -69,11 +66,12 @@
     color: #fff;
     cursor: pointer;
     background-image: none;
-    background-color: #444;
+    background-color: #374151;
+    box-shadow: inset 1px 1px 1px rgb(228, 248, 252);
 }
 
 .cell.revealed {
-    background-color: #777;
+    background-color: #e5e7eb;
 }
 
 .cell.flagged {
@@ -81,11 +79,21 @@
 }
 
 .timer {
-    margin-bottom: 10px;
+    margin-top: 10px;
+    color: #fff;
+    background-color: #6d7988;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    padding: 10px;
 }
 
 .flag-counter {
-    margin-bottom: 20px;
+    background-color: #6d7988;
+    color: #fff;
+    margin-bottom: 10px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 10px;
 }
 
 .modal {
@@ -101,8 +109,8 @@
 }
 
 .modal-content {
-    background-color: #fff;
-    border: 1px solid #ccc;
+    background-color: #e5e7eb;
+    border-radius: 5px;
     padding: 20px;
     text-align: center;
 }
@@ -149,4 +157,48 @@
 
 .cell.flagged::before {
     content: '🚩'; /* flag emoji */
+}
+
+.main-menu button {
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.main-menu .contents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-menu label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    padding: 10px;
+}
+
+.options-label-text {
+    margin-right: 10px;
+}
+
+.contents:first-child {
+    margin: 30px;
+    padding: 30px;
+    border-radius: 5px;
+    background-color: #6b7280;
+}
+select {
+    display: inline-block;
+    padding: 3px 6px;
+    font-size: 12px;
+    line-height: 20px;
+    background-color: #4b5563;
+    color: #fff;
+    vertical-align: middle;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
 }
