--- a/src/TicTacToe/style.css
+++ b/src/TicTacToe/style.css
@@ -20,6 +20,7 @@
 
 .tic-tac-toe-game-info button {
     background-color: #222;
+    color: white;
     padding: 5px;
     margin: 2px;
 }
